--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "morgan": "^1.9.1",
     "stellar-hd-wallet": "0.0.10",
     "stellar-sdk": "^3.3.0",
+    "swagger-ui-express": "^4.1.3",
     "uuid": "^3.4.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "yamljs": "^0.3.0"
   }
 }
